--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "crispy-web",
   "version": "0.1.0",
-  "private": true,
+  "description": "Crispy web interface",
+  "repository": "git@github.com:WiseEngineering/crsipy-web.git",
+  "author": "WiseEngineering open-source@wise-engineering.com",
+  "license": "MIT",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
