--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "13.1.8",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.5",
+    "eslint-plugin-react": "7.18.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scripts": "3.3.0",
@@ -23,7 +24,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "eslint --ext .ts src"
+    "lint": "eslint --ext .ts,.tsx src"
   },
   "eslintConfig": {
     "extends": "react-app"
