--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/node": "13.1.8",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.5",
+    "@types/react-router-dom": "5.1.3",
     "eslint-plugin-react": "7.18.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.3.0",
     "typescript": "3.7.5"
   },
