--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@graphql-codegen/cli": "1.11.2",
+    "@graphql-codegen/fragment-matcher": "1.11.2",
+    "@graphql-codegen/typescript-graphql-files-modules": "1.11.2",
+    "@graphql-codegen/typescript-operations": "1.11.2",
+    "@graphql-codegen/typescript-react-apollo": "1.11.2",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
@@ -15,8 +20,14 @@
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "5.1.3",
+    "apollo-cache-inmemory": "1.6.5",
+    "apollo-client": "2.6.8",
+    "apollo-link-error": "1.1.12",
+    "apollo-link-http": "1.5.16",
     "eslint-plugin-react": "7.18.0",
+    "graphql": "14.6.0",
     "react": "16.12.0",
+    "react-apollo": "2.5.4",
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.3.0",
@@ -26,7 +37,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "eslint --ext .ts,.tsx src"
+    "lint": "eslint --ext .ts,.tsx src",
+    "graphql-codegen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": "react-app"
